--- a/app/templates/_role_modal.html
+++ b/app/templates/_role_modal.html
@@ -37,8 +37,8 @@
               </label>
 
               <label style="display: flex; align-items: center; gap: 5px; white-space: nowrap; font-size: 0.9em;">
-                <span style="font-weight: normal;">Is Distinct:</span>
-                <input type="checkbox" id="is_distinct" name="is_distinct" style="transform: scale(1.1)" />
+                <span style="font-weight: normal;">Has Single Owner:</span>
+                <input type="checkbox" id="has_single_owner" name="has_single_owner" style="transform: scale(1.1)" />
               </label>
 
               <label style="display: flex; align-items: center; gap: 5px; white-space: nowrap; font-size: 0.9em;">
